[package]
name = "chksm"
description = "A multipurpose rust library for use in my projects"
repository = "https://github.com/ChecksumDev/chksm"
homepage = "https://github.com/ChecksumDev/chksm"
license = "GPL-3.0"
categories = [
    "cryptography",
    "filesystem",
    "caching",
    "asynchronous",
    "database"
]
version = "0.1.2"
edition = "2021"

[profile.dev]
opt-level = 0
lto = false
debug = true
runtimes = "build"
codegen-units = 1
debug-assertions = true
overflow-checks = true
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
debug = false
opt-level = 3

[lib]
name = "chksm"
crate-type = ["lib"]

[features]
logging = ["chrono"]

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"], optional = true }
