[package]
name = "chksm"
description = "A multipurpose rust library for use in my projects"
repository = "https://github.com/ChecksumDev/chksm"
homepage = "https://github.com/ChecksumDev/chksm"
license-file = "LICENSE"
categories = [
    "cryptography",
    "filesystem",
    "caching",
    "asynchronous",
    "database"
]
keywords = ["checksum"]
readme = "README.md"
version = "0.2.4"
edition = "2021"

[profile.dev]
opt-level = 0
lto = false
debug = true
runtimes = "build"
codegen-units = 1
debug-assertions = true
overflow-checks = true
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
debug = false
opt-level = 3

[lib]
name = "chksm"
crate-type = ["lib"]

[features]
default = ["net", "crypto"]
logging = ["chrono"]
net = []
crypto = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"], optional = true }
